--- a/package.json
+++ b/package.json
@@ -18,15 +18,20 @@
   "license": "ISC",
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "antd": "^5.3.0",
+    "echarts": "^5.4.1",
+    "react-antd-select": "^1.0.7",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.2",
+    "redux": "^4.2.1",
+    "axios": "^1.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
-    "antd": "^5.3.0",
     "autoprefixer": "^10.4.13",
-    "axios": "^1.3.4",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^10.0.0",
@@ -34,15 +39,10 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^4.2.2",
-    "echarts": "^5.4.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
     "node-sass": "^8.0.0",
     "postcss-loader": "^7.0.2",
-    "react-antd-select": "^1.0.7",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.2",
-    "redux": "^4.2.1",
     "sass-loader": "^13.2.0",
     "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.1",
