--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 # dependencies
 /node_modules
-/dist
+/.idea
 /.pnp
 .pnp.js
 
@@ -10,15 +10,14 @@
 /coverage
 
 # production
-/build
-
+/dist
 # misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
+.idea
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
