--- a/.gitignore
+++ b/.gitignore
@@ -10,14 +10,16 @@
 /coverage
 
 # production
-/dist
+
 # misc
+.idea
+.vscode
+.gitignore
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.idea
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
