--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 
 # dependencies
 /node_modules
-/.idea
 /.pnp
 .pnp.js
 
@@ -12,12 +11,13 @@
 # production
 /dist
 # misc
+.idea
+.vscode
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.idea
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
