--- a/package.json
+++ b/package.json
@@ -12,40 +12,54 @@
     "build:analy": "cross-env NODE_ENV=production BASE_ENV=development webpack -c build/webpack.analy.js",
     "build:test": "cross-env NODE_ENV=production BASE_ENV=test webpack -c build/webpack.prod.js",
     "build:pre": "cross-env NODE_ENV=production BASE_ENV=pre webpack -c build/webpack.prod.js",
-    "build:prod": "cross-env NODE_ENV=production BASE_ENV=production webpack -c build/webpack.prod.js"
+    "build:prod": "cross-env NODE_ENV=production BASE_ENV=production webpack -c build/webpack.prod.js",
+    "start": "npm run dev:dev",
+    "build": "npm run build:prod"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "antd": "^5.3.0",
+    "axios": "^1.3.4",
+    "bcryptjs": "^2.4.3",
     "echarts": "^5.4.1",
+    "echarts-for-react": "^3.0.2",
+    "exceljs": "^4.3.0",
+    "react": "^18.2.0",
     "react-antd-select": "^1.0.7",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "redux": "^4.2.1",
-    "axios": "^1.3.4"
+    "swiper": "^6.8.4"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
+    "@babel/plugin-proposal-decorators": "^7.22.7",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^9.1.2",
-    "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^10.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^4.2.2",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "glob-all": "^3.3.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
     "node-sass": "^8.0.0",
     "postcss-loader": "^7.0.2",
+    "prettier": "^2.8.7",
+    "purgecss-webpack-plugin": "^4.1.3",
     "sass-loader": "^13.2.0",
     "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.1",
+    "styled-components": "^6.0.7",
+    "terser-webpack-plugin": "^5.3.9",
     "thread-loader": "^3.0.4",
     "webpack": "^5.75.0",
     "webpack-bundle-analyzer": "^4.8.0",
@@ -53,5 +67,11 @@
     "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0",
     "webpack-node-externals": "^3.0.0"
+  },
+  "lint-staged": {
+    "packages/**/src/**/*.{ts,tsx}": [
+      "prettier --write",
+      "eslint --cache --fix"
+    ]
   }
 }
